// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"!!map\\n #123 \\n&anchor # 456\\na: 123" 1`] = `
mapping (4:1 ~ 4:7)
1 | !!map¶
2 | ·#123·¶
3 | &anchor·#·456¶
4 | a:·123¶
  | ^^^^^^
<mapping>
  <shorthandTag handle="!!" suffix="map" />
  <anchor value="anchor" />
  <middleComment value="123 ">
  <middleComment value=" 456">
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"!!map\\n #123 \\n&anchor # 456\\na: 123" 2`] = `
comment (2:2 ~ 2:7)
1 | !!map¶
2 | ·#123·¶
  |  ^^^^^
3 | &anchor·#·456¶
4 | a:·123¶
<comment value="123 " />
`;

exports[`"!!map\\n #123 \\n&anchor # 456\\na: 123" 3`] = `
comment (3:9 ~ 3:14)
1 | !!map¶
2 | ·#123·¶
3 | &anchor·#·456¶
  |         ^^^^^
4 | a:·123¶
<comment value=" 456" />
`;

exports[`":   " 1`] = `
mapping (1:1 ~ 1:2)
1 | :···¶
  | ^
<mapping>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`":   " 2`] = `
mappingItem (1:1 ~ 1:2)
1 | :···¶
  | ^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`":   " 3`] = `
mappingKey (1:1 ~ 1:1)
1 | :···¶
  | ~
<mappingKey>
  <null />
</mappingKey>
`;

exports[`":   " 4`] = `
mappingValue (1:1 ~ 1:2)
1 | :···¶
  | ^
<mappingValue>
  <null />
</mappingValue>
`;

exports[`": 123  " 1`] = `
mapping (1:1 ~ 1:6)
1 | :·123··¶
  | ^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`": 123  " 2`] = `
mappingItem (1:1 ~ 1:6)
1 | :·123··¶
  | ^^^^^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`": 123  " 3`] = `
mappingKey (1:1 ~ 1:1)
1 | :·123··¶
  | ~
<mappingKey>
  <null />
</mappingKey>
`;

exports[`": 123  " 4`] = `
mappingValue (1:1 ~ 1:6)
1 | :·123··¶
  | ^^^^^
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"? 123" 1`] = `
mapping (1:1 ~ 1:6)
1 | ?·123¶
  | ^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <null />
  </mappingItem>
</mapping>
`;

exports[`"? 123" 2`] = `
mappingItem (1:1 ~ 1:6)
1 | ?·123¶
  | ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <null />
</mappingItem>
`;

exports[`"? 123" 3`] = `
mappingKey (1:1 ~ 1:6)
1 | ?·123¶
  | ^^^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"? 123" 4`] = `
null (-1:-1 ~ -1:-1)
1 | ?·123¶
<null />
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 1`] = `
mapping (1:1 ~ 4:6)
1 | ?·a··¶
  | ^^^^^^
2 | :·123··¶
  | ^^^^^^^^
3 | ?·b··¶
  | ^^^^^^
4 | :·456··¶
  | ^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
  <mappingItem>
    <mappingKey>
      <plain value="b" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 2`] = `
mappingItem (1:1 ~ 2:6)
1 | ?·a··¶
  | ^^^^^^
2 | :·123··¶
  | ^^^^^
3 | ?·b··¶
4 | :·456··¶
<mappingItem>
  <mappingKey>
    <plain value="a" />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 3`] = `
mappingItem (3:1 ~ 4:6)
1 | ?·a··¶
2 | :·123··¶
3 | ?·b··¶
  | ^^^^^^
4 | :·456··¶
  | ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="b" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</mappingItem>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 4`] = `
mappingKey (1:1 ~ 1:4)
1 | ?·a··¶
  | ^^^
2 | :·123··¶
3 | ?·b··¶
4 | :·456··¶
<mappingKey>
  <plain value="a" />
</mappingKey>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 5`] = `
mappingKey (3:1 ~ 3:4)
1 | ?·a··¶
2 | :·123··¶
3 | ?·b··¶
  | ^^^
4 | :·456··¶
<mappingKey>
  <plain value="b" />
</mappingKey>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 6`] = `
mappingValue (2:1 ~ 2:6)
1 | ?·a··¶
2 | :·123··¶
  | ^^^^^
3 | ?·b··¶
4 | :·456··¶
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"? a  \\n: 123  \\n? b  \\n: 456  " 7`] = `
mappingValue (4:1 ~ 4:6)
1 | ?·a··¶
2 | :·123··¶
3 | ?·b··¶
4 | :·456··¶
  | ^^^^^
<mappingValue>
  <plain value="456" />
</mappingValue>
`;

exports[`"? abc\\n? def" 1`] = `
mapping (1:1 ~ 2:6)
1 | ?·abc¶
  | ^^^^^^
2 | ?·def¶
  | ^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="abc" />
    </mappingKey>
    <null />
  </mappingItem>
  <mappingItem>
    <mappingKey>
      <plain value="def" />
    </mappingKey>
    <null />
  </mappingItem>
</mapping>
`;

exports[`"? abc\\n? def" 2`] = `
mappingItem (1:1 ~ 1:6)
1 | ?·abc¶
  | ^^^^^
2 | ?·def¶
<mappingItem>
  <mappingKey>
    <plain value="abc" />
  </mappingKey>
  <null />
</mappingItem>
`;

exports[`"? abc\\n? def" 3`] = `
mappingItem (2:1 ~ 2:6)
1 | ?·abc¶
2 | ?·def¶
  | ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="def" />
  </mappingKey>
  <null />
</mappingItem>
`;

exports[`"? abc\\n? def" 4`] = `
mappingKey (1:1 ~ 1:6)
1 | ?·abc¶
  | ^^^^^
2 | ?·def¶
<mappingKey>
  <plain value="abc" />
</mappingKey>
`;

exports[`"? abc\\n? def" 5`] = `
mappingKey (2:1 ~ 2:6)
1 | ?·abc¶
2 | ?·def¶
  | ^^^^^
<mappingKey>
  <plain value="def" />
</mappingKey>
`;

exports[`"? abc\\n? def" 6`] = `
null (-1:-1 ~ -1:-1)
1 | ?·abc¶
2 | ?·def¶
<null />
`;

exports[`"? abc\\n? def" 7`] = `
null (-1:-1 ~ -1:-1)
1 | ?·abc¶
2 | ?·def¶
<null />
`;

exports[`"a:   " 1`] = `
mapping (1:1 ~ 1:3)
1 | a:···¶
  | ^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"a:   " 2`] = `
mappingItem (1:1 ~ 1:3)
1 | a:···¶
  | ^^
<mappingItem>
  <mappingKey>
    <plain value="a" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"a:   " 3`] = `
mappingKey (1:1 ~ 1:2)
1 | a:···¶
  | ^
<mappingKey>
  <plain value="a" />
</mappingKey>
`;

exports[`"a:   " 4`] = `
mappingValue (1:2 ~ 1:3)
1 | a:···¶
  |  ^
<mappingValue>
  <null />
</mappingValue>
`;

exports[`"a: 123  " 1`] = `
mapping (1:1 ~ 1:7)
1 | a:·123··¶
  | ^^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"a: 123  " 2`] = `
mappingItem (1:1 ~ 1:7)
1 | a:·123··¶
  | ^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="a" />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"a: 123  " 3`] = `
mappingKey (1:1 ~ 1:2)
1 | a:·123··¶
  | ^
<mappingKey>
  <plain value="a" />
</mappingKey>
`;

exports[`"a: 123  " 4`] = `
mappingValue (1:2 ~ 1:7)
1 | a:·123··¶
  |  ^^^^^
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"a: 123  \\nb: 456  " 1`] = `
mapping (1:1 ~ 2:7)
1 | a:·123··¶
  | ^^^^^^^^^
2 | b:·456··¶
  | ^^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="a" />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
  <mappingItem>
    <mappingKey>
      <plain value="b" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"a: 123  \\nb: 456  " 2`] = `
mappingItem (1:1 ~ 1:7)
1 | a:·123··¶
  | ^^^^^^
2 | b:·456··¶
<mappingItem>
  <mappingKey>
    <plain value="a" />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"a: 123  \\nb: 456  " 3`] = `
mappingItem (2:1 ~ 2:7)
1 | a:·123··¶
2 | b:·456··¶
  | ^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="b" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</mappingItem>
`;

exports[`"a: 123  \\nb: 456  " 4`] = `
mappingKey (1:1 ~ 1:2)
1 | a:·123··¶
  | ^
2 | b:·456··¶
<mappingKey>
  <plain value="a" />
</mappingKey>
`;

exports[`"a: 123  \\nb: 456  " 5`] = `
mappingKey (2:1 ~ 2:2)
1 | a:·123··¶
2 | b:·456··¶
  | ^
<mappingKey>
  <plain value="b" />
</mappingKey>
`;

exports[`"a: 123  \\nb: 456  " 6`] = `
mappingValue (1:2 ~ 1:7)
1 | a:·123··¶
  |  ^^^^^
2 | b:·456··¶
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"a: 123  \\nb: 456  " 7`] = `
mappingValue (2:2 ~ 2:7)
1 | a:·123··¶
2 | b:·456··¶
  |  ^^^^^
<mappingValue>
  <plain value="456" />
</mappingValue>
`;

exports[`"def:     456 # hello" 1`] = `
mapping (1:1 ~ 1:21)
1 | def:·····456·#·hello¶
  | ^^^^^^^^^^^^^^^^^^^^
<mapping>
  <mappingItem>
    <mappingKey>
      <plain value="def" />
    </mappingKey>
    <mappingValue>
      <plain value="456">
        <trailingComment value=" hello">
      </plain>
    </mappingValue>
  </mappingItem>
</mapping>
`;

exports[`"def:     456 # hello" 2`] = `
mappingItem (1:1 ~ 1:21)
1 | def:·····456·#·hello¶
  | ^^^^^^^^^^^^^^^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="def" />
  </mappingKey>
  <mappingValue>
    <plain value="456">
      <trailingComment value=" hello">
    </plain>
  </mappingValue>
</mappingItem>
`;

exports[`"def:     456 # hello" 3`] = `
mappingKey (1:1 ~ 1:4)
1 | def:·····456·#·hello¶
  | ^^^
<mappingKey>
  <plain value="def" />
</mappingKey>
`;

exports[`"def:     456 # hello" 4`] = `
mappingValue (1:4 ~ 1:21)
1 | def:·····456·#·hello¶
  |    ^^^^^^^^^^^^^^^^^
<mappingValue>
  <plain value="456">
    <trailingComment value=" hello">
  </plain>
</mappingValue>
`;

exports[`Implicit map keys need to be followed by map values 1`] = `
"Implicit map keys need to be followed by map values
1 | asd:·123¶
2 | qwe¶
  | ^^^^
3 | ¶
  | ^"
`;
